# todo

./: .gitignore  CMakeLists.txt  PRD.md  README.md  Vector.h++  main.c++
docs/: appRequirements.md  prd-todo-app.md  smartArrayRequirements.md
src/app/: main.cpp  smartArrayDemo.cpp
src/app/data/: Task.cpp  Task.h  TaskStore.cpp  TaskStore.h
src/app/tui/: App.cpp  App.h  DetailPane.cpp  DetailPane.h  TaskListPane.cpp  TaskListPane.h
src/smartArray/: SmartArray.cpp  SmartArray.h
tests/: CMakeLists.txt  exampleTests.cpp  smartArrayTests.cpp  taskStoreTests.cpp
